use DatePicker using view instead of dialog

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
             android:label="@string/app_name">
 
         </activity>
+        <activity android:name=".DatePickerActivity"></activity>
+
+
     </application>
 
 </manifest>
